opa-custom-authz-1/common.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    env: opa
    istio-injection: enabled
  name: opa
---
# Define the service entry for the local OPA service on port 9191.
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: local-opa-grpc
  namespace: opa
spec:
  hosts:
  - "local-opa-grpc.local"
  endpoints:
  - address: "127.0.0.1"
  ports:
  - name: grpc
    number: 9191
    protocol: GRPC
  resolution: STATIC
